@@ -559,11 +559,11 @@ Options are:
 \item[\texttt{-s}] suppresses the output of the final tree view.
 \item[\texttt{-q}] runs quietly (no progress info).
 \item[\texttt{-I \textsl{<dir>}}] adds the given directory to the load path.
-\item[\texttt{-force}] enforces saving the session, if all proof
+\item[\texttt{-{}-force}] enforces saving the session, if all proof
   attempts replayed correctly, even if some goals are not proved.
-\item[\texttt{-obsolete-only}] replays the proofs only if the session
+\item[\texttt{-{}-obsolete-only}] replays the proofs only if the session
   contains obsolete proof attempts.
-\item[\texttt{-smoke-detector \{none|top|deep\}}] tries to detect
+\item[\texttt{-{}-smoke-detector \{none|top|deep\}}] tries to detect
   if the context is self-contradicting.
 \end{description}
 
