@@ -1,6 +1,8 @@
 
 * marks an incompatible change
 
+ * [why3replayer] renamed option -obsolete-only to --obsolete-only,
+   -smoke-detector to --smoke-detector, -force to --force
  * [library] fixed inconsistency in libraries map.MapPermut and
    array.ArrayPermut; names and meaning of symbols "permut..." have
    been modified
